# Multi-Agent-Financial-Analyst

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
data/: ingest.py
src/: config.py  graph.py  llm.py  models.py  state.py
src/agents/: fundamentals.py  news.py  quantitative.py  supervisor.py  synthesis.py
src/tools/: market_data.py  rag.py  web_search.py
